# Board_Games

./: .gitignore  CMakeLists.txt  Class_Diagram.puml  Doxyfile  README.md  Tic_Tac_Toe.puml
docs/html/: AiPlayer_8h.html  AiPlayer_8h__dep__incl.map  AiPlayer_8h__dep__incl.md5  AiPlayer_8h__incl.map  AiPlayer_8h__incl.md5  AiPlayer_8h_source.html  BoardGame__Classes_8h.html  BoardGame__Classes_8h__dep__incl.map  BoardGame__Classes_8h__dep__incl.md5  BoardGame__Classes_8h__incl.map  BoardGame__Classes_8h__incl.md5  BoardGame__Classes_8h_source.html  Diamond__Tic__Tac__Toe_8cpp.html  Diamond__Tic__Tac__Toe_8cpp__incl.map  Diamond__Tic__Tac__Toe_8cpp__incl.md5  Diamond__Tic__Tac__Toe_8cpp_source.html  Diamond__Tic__Tac__Toe_8h.html  Diamond__Tic__Tac__Toe_8h__dep__incl.map  Diamond__Tic__Tac__Toe_8h__dep__incl.md5  Diamond__Tic__Tac__Toe_8h__incl.map  Diamond__Tic__Tac__Toe_8h__incl.md5  Four-in-a-row_8cpp.html  (+803 more)
html/: files_dup.js
include/: AiPlayer.h  BoardGame_Classes.h  Computer_Player.h  Diamond_Tic_Tac_Toe.h  Four-in-a-row.h  Four_Four_XO.h  Infinity_XO_Classes.h  Memory Tic-Tac-Toe.h  Memory_Tic-Tac-Toe.h  Misere_Tic_Tac_Toe.h  Numerical_X_O.h  Obstacles_XO.h  Pyramid_XO.h  SUS_Classes.h  Smart_Player.h  Ultimate_Tic_Tac_Toe.h  Words_XO.h  X_O_5x5.h  gamesMenu.h
src/: Diamond_Tic_Tac_Toe.cpp  Four-in-a-row.cpp  Four_Four_XO.cpp  Infinity_XO_Classes.cpp  Memory Tic-Tac-Toe.cpp  Memory_Tic-Tac-Toe.cpp  Misere_Tic_Tac_Toe.cpp  Numerical_X_O.cpp  Obstacles_XO.cpp  Pyramid_XO.cpp  SUS_Classes.cpp  Ultimate_Tic_Tac_Toe.cpp  Words_XO.cpp  X_O_5x5.cpp  main.cpp
(+497 files in other folders)
